# Primordia

./: README.md
primordia/: README.md  pyproject.toml  run.bat
primordia/src/primordia/: __init__.py  app.py  brain.py  config.py  experiments.py  genome.py  simulation.py
primordia/src/primordia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
